lib/qml/ResultsView.qml
@@ -46,13 +46,6 @@ ListView {
     // be run when the model is populated
     property bool runAutomatically
 
-    // This is used to disable mouse selection if the user interacts only with keyboard
-    property bool moved: false
-    property point savedMousePosition: Milou.MouseHelper.globalMousePosition()
-    function mouseMovedGlobally() {
-        return savedMousePosition != Milou.MouseHelper.globalMousePosition();
-    }
-
     model: Milou.ResultsModel {
         id: resultModel
         limit: 15
@@ -91,8 +84,6 @@ ListView {
 
         function resetView() {
             listView.currentIndex = 0;
-            listView.moved = false;
-            listView.savedMousePosition = Milou.MouseHelper.globalMousePosition();
         }
     }
 
